--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^4.6.8",
     "react": "^16.5.1",
     "react-dom": "^16.2.0",
+    "react-player": "^1.6.4",
     "react-router-dom": "^4.2.2",
     "webpack": "^3.11.0"
   }
