add start script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "postinstall": "npm run webpack",
     "webpack": "./node_modules/webpack/bin/webpack.js",
-    "start:dev": "npm run webpack -- -w & nodemon server --ignore dist/ --ignore client/src/"
+    "start:dev": "npm run webpack -- -w & nodemon server --ignore dist/ --ignore client/src/",
+    "start": "node server"
   },
   "keywords": [],
   "author": "",
