--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.2.0",
     "react-player": "^1.6.4",
     "react-router-dom": "^4.2.2",
+    "react-youtube": "^7.8.0",
     "webpack": "^3.11.0"
   }
 }
