lots of styling

--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "nodemailer": "^4.6.8",
     "react": "^16.5.1",
     "react-dom": "^16.2.0",
+    "react-pdf-js": "^4.0.0-alpha.6",
+    "react-pdf-preview": "^1.0.0",
+    "react-pdf-reader": "^0.1.8",
     "react-player": "^1.6.4",
     "react-router-dom": "^4.2.2",
     "react-youtube": "^7.8.0",
